--- a/ArgentinaVacuna/views/layout.pug
+++ b/ArgentinaVacuna/views/layout.pug
@@ -20,8 +20,8 @@ html(lang="es")
       $('#tabla').DataTable({
       columnDefs: [
           {
-            targets: 4,
-            render: DataTable.render.datetime('Do MMM YYYY'),
+            targets: 3,
+            render: DataTable.render.datetime('DD-MM-YYYY'),
             },
         ],
         language: {
