--- a/ArgentinaVacuna/views/distribucion/centroVacunacionDis/listarDepositosPro.pug
+++ b/ArgentinaVacuna/views/distribucion/centroVacunacionDis/listarDepositosPro.pug
@@ -2,7 +2,7 @@ extends ../../layout.pug
 
 block content
     .contenedorVolverCrear
-        a.link(href="./")
+        a.link(href="/distribucion/distribucionCentroVac")
             | Volver Atrás
             img(src='/images/volver.png', alt="Flecha hacia atrás")
     h2 Listado de Depositos Provinciales.
