--- a/ArgentinaVacuna/views/distribucion/centroVacunacionDis/listarLotes.pug
+++ b/ArgentinaVacuna/views/distribucion/centroVacunacionDis/listarLotes.pug
@@ -2,7 +2,7 @@ extends ../../layout.pug
 
 block content
     .contenedorVolverCrear
-        a.link(href="../")
+        a.link(href="/distribucion/distribucionCentroVac/depositos")
             | Volver Atrás
             img(src='/images/volver.png', alt="Flecha hacia atrás")
     h2 Listado de Lotes.
